feat: atualizando rotas get e post para nao incluir o id por causa od autogen do swagger
