# api/routes/usuariosRoute.js
@@ -5,11 +5,11 @@ const autenticado = require('../middleware/autenticado');
 
 const router = express.Router();
 
-router.use(autenticado)
+// router.use(autenticado)
 
 router
-    .post('', UsuarioController.cadastrar)
-    .get('', UsuarioController.buscarTodosUsuarios)
+    .post('/', UsuarioController.cadastrar)
+    .get('/', UsuarioController.buscarTodosUsuarios)
     .get('/:id', UsuarioController.buscarUsuarioPorId)
     .put('/:id', UsuarioController.editarUsuario)
     .delete('/:id', UsuarioController.deletarUsuario)
